// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renders the avatar correctly 1`] = `
<div>
  <h6
    class="sc-bdnxRM bYESJe"
  >
    Titulo
  </h6>
</div>
`;

exports[`Heading should render with all the props 1`] = `
<div>
  <h1
    class="sc-bdnxRM hAxhwO mb-20"
  >
    Titulo
  </h1>
</div>
`;
